name:                websocket-hs
version:             0.1.0.0
author:              Markus Rother
maintainer:          mail@markusrother.de
build-type:          Simple
cabal-version:       >=1.10

executable websocket-hs
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       bytestring >= 0.10.6.0,
                       stm >= 2.4.4.1,
                       text >= 1.2.2.1,
                       websockets >=0.9.7
  hs-source-dirs:      src
  default-language:    Haskell2010